--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "satooshi/php-coveralls": "^0.6.1"
     },
     "scripts": {
         "post-install-cmd": [
