--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
-        "satooshi/php-coveralls": "^0.6.1"
+        "satooshi/php-coveralls": "^0.6.1",
+        "phpunit/phpunit": "^5.0"
     },
     "scripts": {
         "post-install-cmd": [
