--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flaiker/inventory.manager",
+    "name": "inventory.manager/inventory.manager",
     "license": "proprietary",
     "type": "project",
     "autoload": {
