Konverter zur Konvertierung JSON -> TestModel hinzugefügt

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,7 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    test_model_converter:
+        class: AppBundle\Converter\TestModelConverter
+        tags:
+            - { name: request.param_converter, priority: -2, converter: test_model_converter }
