--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,9 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
+
     encoders:
         AppBundle\Models\User:
             algorithm: bcrypt
