--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -22,4 +22,4 @@ services:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 200 }
     user_manager:
         class: AppBundle\Manager\UserManager
-        arguments: ["@doctrine.orm.default_entity_manager", "@validator", "@security.user_password_encoder.generic", "@security.token_storage"]
+        arguments: ["@doctrine.orm.default_entity_manager", "@validator", "@security.user_password_encoder.generic", "@security.token_storage", "@security.authorization_checker"]
