--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,6 +16,11 @@ services:
         tags:
             - { name: request.param_converter, priority: -2, converter: user_converter }
         arguments: ["@doctrine.orm.entity_manager"]
+    room_converter:
+        class: AppBundle\Converter\RoomConverter
+        tags:
+            - { name: request.param_converter, priority: -2, converter: room_converter }
+        arguments: ["@doctrine.orm.entity_manager"]
     json_exception_listener:
         class: AppBundle\Listener\JsonExceptionListener
         tags:
@@ -23,3 +28,6 @@ services:
     user_manager:
         class: AppBundle\Manager\UserManager
         arguments: ["@doctrine.orm.default_entity_manager", "@validator", "@security.user_password_encoder.generic", "@security.token_storage", "@security.authorization_checker"]
+    room_manager:
+        class: AppBundle\Manager\RoomManager
+        arguments: ["@doctrine.orm.default_entity_manager", "@validator", "@security.token_storage", "@security.authorization_checker"]
